fix: fix the size and position on mobile

--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -1,10 +1,12 @@
 .content-filter {
 	padding: 1.5em 0;
-	width: 100%;
-	height: 100%;
 	background-color: #b6b6b6;
+	width: 0;
 	gap: 0.5em;
+	width: fit-content;
 	font-size: small;
+	position: absolute;
+	z-index: 11;
 }
 
 .filter-description {
@@ -42,18 +44,29 @@
 }
 
 input {
-	max-width: 100%;
+	width: 100%;
 	height: 20%;
+	padding: 0.15em;
 	outline: none;
+	border: none;
+	border-radius: 0.2em;
 }
 
 input[type='range'] {
 	background: transparent;
 	accent-color: #f95b2e;
-	width: 10em;
+	width: 100%;
 }
 
 select {
 	width: 100%;
 	outline: none;
+}
+
+@media screen and (min-width: 1200px) {
+	.content-filter {
+		width: 20%;
+		position: static;
+		z-index: auto;
+	}
 }
